# dixtribution

./: README.md  pyproject.toml
src/dixtribution/: dixtributor.py  main.py
src/dixtribution/dixtributors/: errs.py  export.py  fa.py  plot_result.py  plt_final.py
